--- a/src/main/resources/templates/page/2019/en/submission.html
+++ b/src/main/resources/templates/page/2019/en/submission.html
@@ -62,15 +62,15 @@ var _hmt = _hmt || [];
 
    <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019" href="/">Home</a></li>
-      <li><a title="About" href="/about">About</a></li>
-      <li><a title="Organization" href="/organization">Organizer</a></li>
-      <li><a title="Speaker" href="/speakers">Speaker</a></li>
-      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
-			<li><a title="Program" href="/program">Program</a></li>
-      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
-      <li><a title="Venue" href="/venue">Venue</a></li>
-    	<li><a title="Chinese" href="/cn">CHINESE</a></li>
+      <li><a title="ICABST2019" href="/2019">Home</a></li>
+      <li><a title="About" href="/2019/about">About</a></li>
+      <li><a title="Organization" href="/2019/organization">Organizer</a></li>
+      <li><a title="Speaker" href="/2019/speakers">Speaker</a></li>
+      <li style="width: 140px"><a title="Submission" href="/2019/submission">Submission</a></li>
+			<li><a title="Program" href="/2019/program">Program</a></li>
+      <li style="width: 140px"><a title="Registration" href="/2019/registration">Registration</a></li>
+      <li><a title="Venue" href="/2019/venue">Venue</a></li>
+    	<li><a title="Chinese" href="/2019cn">CHINESE</a></li>
     </ul>
   </div>
   
@@ -85,8 +85,8 @@ var _hmt = _hmt || [];
         <div class="public_p pb-20 pl-30">
 					<p>1. Abstract should be strictly within one A4 page in length apart from the cover letter page and containing about 300-350 words.</p>
 					<p>2. All Submissions should be in English, and no other language is acceptable.</p>
-					<p>3. Make submission by <a class="pointer" href="/submit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System</strong></u></a>. All required information is needed to finish the registration.</p>
-					<p>4. Or download the <a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract.</p>
+					<p>3. Make submission by <a class="pointer" href="/2019/submit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System</strong></u></a>. All required information is needed to finish the registration.</p>
+					<p>4. Or download the <a class="pointer" href="/cn/download/ICABST-Registration-Form2019.xlsx" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract.</p>
 					<p>5. After submission, the conference secretary will contact you in about 2 working days.</p>
 					<p>6. All accepted abstracts will be printed in Conference Program and Abstract Book.</p>
 					<p>7. Please click to download the <a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank" style="color: #102cf7"><u><strong>"Abstract Templete"</strong></u></a>.</p>
@@ -132,8 +132,8 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form2019.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
 			    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
 			    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
 			    <div class="clear"></div>
