--- a/src/main/resources/templates/page/2019/en/submit.html
+++ b/src/main/resources/templates/page/2019/en/submit.html
@@ -61,15 +61,15 @@ var _hmt = _hmt || [];
 
    <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019" href="/">Home</a></li>
-      <li><a title="About" href="/about">About</a></li>
-      <li><a title="Organization" href="/organization">Organizer</a></li>
-      <li><a title="Speaker" href="/speakers">Speaker</a></li>
-      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
-			<li><a title="Program" href="/program">Program</a></li>
-      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
-      <li><a title="Venue" href="/venue">Venue</a></li>
-    	<li><a title="Chinese" href="/cn">CHINESE</a></li>
+      <li><a title="ICABST2019" href="/2019">Home</a></li>
+      <li><a title="About" href="/2019/about">About</a></li>
+      <li><a title="Organization" href="/2019/organization">Organizer</a></li>
+      <li><a title="Speaker" href="/2019/speakers">Speaker</a></li>
+      <li style="width: 140px"><a title="Submission" href="/2019/submission">Submission</a></li>
+			<li><a title="Program" href="/2019/program">Program</a></li>
+      <li style="width: 140px"><a title="Registration" href="/2019/registration">Registration</a></li>
+      <li><a title="Venue" href="/2019/venue">Venue</a></li>
+    	<li><a title="Chinese" href="/2019cn">CHINESE</a></li>
     </ul>
   </div>
         
@@ -85,7 +85,7 @@ var _hmt = _hmt || [];
                     <p>1. Abstract should be strictly within one A4 page in length apart from the cover letter page and containing at least 200 words.</p>
 					<p>2. All Submissions should be in English, and no other language is acceptable.</p>
                     <p>3. You should fill all the information needed to finish the registration.</p>
-                    <p>4. Or you can download the <a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract and CV.</p>
+                    <p>4. Or you can download the <a class="pointer" href="/cn/download/ICABST-Registration-Form2019.xlsx" target="_blank" style="color: #102cf7"><u>Registration Form</u></a>, fill the information needed and send it by email (icabst@apanse.com) with your abstract and CV.</p>
                     <p>5. After submission, the conference secretary will contact you in about 2 working days.</p>
             </div>
             <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Online Submission System</div>
