--- a/src/main/resources/templates/page/2019/en/about.html
+++ b/src/main/resources/templates/page/2019/en/about.html
@@ -62,15 +62,15 @@ var _hmt = _hmt || [];
 
    <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019" href="/">Home</a></li>
-      <li><a title="About" href="/about">About</a></li>
-      <li><a title="Organization" href="/organization">Organizer</a></li>
-      <li><a title="Speaker" href="/speakers">Speaker</a></li>
-      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
-			<li><a title="Program" href="/program">Program</a></li>
-      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
-      <li><a title="Venue" href="/venue">Venue</a></li>
-    	<li><a title="Chinese" href="/cn">CHINESE</a></li>
+      <li><a title="ICABST2019" href="/2019">Home</a></li>
+      <li><a title="About" href="/2019/about">About</a></li>
+      <li><a title="Organization" href="/2019/organization">Organizer</a></li>
+      <li><a title="Speaker" href="/2019/speakers">Speaker</a></li>
+      <li style="width: 140px"><a title="Submission" href="/2019/submission">Submission</a></li>
+			<li><a title="Program" href="/2019/program">Program</a></li>
+      <li style="width: 140px"><a title="Registration" href="/2019/registration">Registration</a></li>
+      <li><a title="Venue" href="/2019/venue">Venue</a></li>
+    	<li><a title="Chinese" href="/2019cn">CHINESE</a></li>
     </ul>
   </div>
   
@@ -99,7 +99,7 @@ var _hmt = _hmt || [];
 					</p-->
 					<p>
 					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please circulate ICABST2019 to the attention of any of your colleagues who may be interested in participating 
-						(<a href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
+						(<a href="/cn/download/flyer2019.pdf" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
 						We sincerely invite you to join us and hope you will have a fruitful experience during your stay in Thailand! 
 					</p>
           <p>
@@ -115,7 +115,7 @@ var _hmt = _hmt || [];
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Abstract Deadline: Oct. 20, 2019</p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Registration Deadline: Oct. 31, 2019 (After Nov.1, only Late Registration Type available)</p>
 					
-					<p><strong>For more information about visa, traffic, accommodation and others, please click <a title="Venue" class="pointer" href="/venue" style="color: #102cf7" target="_blank"><u>Venue</u></a> for details.</strong></p>
+					<p><strong>For more information about visa, traffic, accommodation and others, please click <a title="Venue" class="pointer" href="/2019/venue" style="color: #102cf7" target="_blank"><u>Venue</u></a> for details.</strong></p>
         </div>
 
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Topics</div>
@@ -144,7 +144,7 @@ var _hmt = _hmt || [];
 						All scientists, scholars, researchers are encouraged to participate the conference for further communication on latest researches, technologies and advanced topics.
           </p>
           <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If anyone who want to make presentation, please finish the submission by <a class="pointer" href="/submit" target="_blank" style="color: #102cf7"><u>Online Submission System</u></a>. 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If anyone who want to make presentation, please finish the submission by <a class="pointer" href="/2019/submit" target="_blank" style="color: #102cf7"><u>Online Submission System</u></a>. 
 						The committee will reply in 7-10 working days. 
 					</p>
         </div>
@@ -160,8 +160,8 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form2019.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
 			    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
 			    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
 			    <div class="clear"></div>
