--- a/src/main/resources/templates/page/2019/en/index.html
+++ b/src/main/resources/templates/page/2019/en/index.html
@@ -65,15 +65,15 @@ var _hmt = _hmt || [];
 
    <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019" href="/">Home</a></li>
-      <li><a title="About" href="/about">About</a></li>
-      <li><a title="Organization" href="/organization">Organizer</a></li>
-      <li><a title="Speaker" href="/speakers">Speaker</a></li>
-      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
-			<li><a title="Program" href="/program">Program</a></li>
-      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
-      <li><a title="Venue" href="/venue">Venue</a></li>
-    	<li><a title="Chinese" href="/cn">CHINESE</a></li>
+      <li><a title="ICABST2019" href="/2019">Home</a></li>
+      <li><a title="About" href="/2019/about">About</a></li>
+      <li><a title="Organization" href="/2019/organization">Organizer</a></li>
+      <li><a title="Speaker" href="/2019/speakers">Speaker</a></li>
+      <li style="width: 140px"><a title="Submission" href="/2019/submission">Submission</a></li>
+			<li><a title="Program" href="/2019/program">Program</a></li>
+      <li style="width: 140px"><a title="Registration" href="/2019/registration">Registration</a></li>
+      <li><a title="Venue" href="/2019/venue">Venue</a></li>
+    	<li><a title="Chinese" href="/2019cn">CHINESE</a></li>
     </ul>
   </div>
         
@@ -120,7 +120,7 @@ var _hmt = _hmt || [];
 					to Myanmar, Laos, Cambodia, Vietnam, Singapore, Malaysia and Indonesia. Thailand is without a doubt one of the most exotic destinations in Asia.
 					<br/>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please circulate ICABST2019 to the attention of any of your colleagues who may be interested in participating 
-					(<a href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
+					(<a href="/cn/download/flyer2019.pdf" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
 					We sincerely invite you to join us and hope you will have a fruitful experience during your stay in Thailand! 
         </p>
       </div>
@@ -130,11 +130,10 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">News</div>
 				<div class="public_p pl-30">
         <ul>
-					<li><a href="/cn/download/conference_program.pdf" download="download" target="_blank" style="color: #102cf7"><u>Clike for Conference Program</u></a></li>
-					<li><a href="/submit" target="_blank" style="color: #102cf7"><u>Onilne Registration System is open to November 20, 2019</u></a></li>
-					<li><a href="/program" target="_blank" style="color: #102cf7"><u>Primary Conference Program has been issued</u></a></li>
-          <li><a href="/about" target="_blank" style="color: #102cf7"><u>ICABST2019 will be divided to 7 Sessions</u></a></li>
-					<li><a href="/venue" target="_blank" style="color: #102cf7"><u>For visa, venue and accommodations, please click "Venue" for details</u></a></li>
+					<li><a href="/2019/proposal" target="_blank" style="color: #102cf7"><u>Call for Proposal of ICABST2020</u></a></li>
+					<li><a href="/2019/achieve" target="_blank" style="color: #102cf7"><u>ICABST2019 Successfully Held in Bangkok, Thailand</u></a></li>
+					<li><a href="/cn/download/conference_program2019.pdf" download="download" target="_blank" style="color: #102cf7"><u>Clike for Conference Program</u></a></li>
+					<li><a href="/2019/venue" target="_blank" style="color: #102cf7"><u>For visa, venue and accommodations, please click "Venue" for details</u></a></li>
 					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>ICABST2019 announcement released by Mahidol University</u></a></li>
         </ul>
         <div class="clear"></div>
@@ -145,8 +144,8 @@ var _hmt = _hmt || [];
         <div class="url pd-5">
           <ul>
             <li ><a class="time pl-25 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>Countdown:&nbsp;<span id="content"></span>&nbsp;&nbsp;days</strong></a></li>
-            <li ><a class="announcement" href="/cn/download/flyer.pdf" target="_blank">&emsp;&emsp;&emsp;<strong>Conference Flyer</strong></a></li>
-            <li ><a class="invitation" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>Registration Form</strong></a></li>
+            <li ><a class="announcement" href="/cn/download/flyer2019.pdf" target="_blank">&emsp;&emsp;&emsp;<strong>Conference Flyer</strong></a></li>
+            <li ><a class="invitation" href="/cn/download/ICABST-Registration-Form2019.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>Registration Form</strong></a></li>
 						<li ><a class="article" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank">&emsp;&emsp;&emsp;<strong>Abstract Templete</strong></a></li>
           </ul>
           <div class="clear"></div>
@@ -157,8 +156,8 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form2019.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
 					<li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
 					<li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
 			    <div class="clear"></div>
