--- a/src/main/resources/templates/page/2020/cn/cpci.html
+++ b/src/main/resources/templates/page/2020/cn/cpci.html
@@ -82,16 +82,14 @@ var _hmt = _hmt || [];
       <div class="public_p pb-20">
         <article class="row-txt">
           <p style="text-align: center; font-size: 22px">
-            <strong>EI及CPCI检索，会议论文专题<br/>2019年年底截稿，快速发表</strong>
+            <strong>EI及CPCI检索，会议论文专题<br/>2020年1月底截稿，快速发表</strong>
           </p>
           <div class="mb-10">
             <p>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议将于2019年12月26日-28日在泰国曼谷召开。本届会议由亚太自然科学与工程协会、梅州大学（Maejo University）联合主办召开，
-							并由玛希隆大学（Mahidol University），清迈大学（Chiang Mai University）提供协办支持。同时大会被Nature Events （www.nature.com）、ACS、MEMBS、BrownWalker Press、IOP Publishing、
-							丁香会议、科学网等多个学术平台收录并发布。在举办学术会议的同时，联合国际知名出版社进行会议及期刊论文的征文和发表活动，历年来已成功帮助国内众多学者完成论文的发表和检索工作。<br/>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;意向发表会议论文的文章，会由大会学术委员会进行评审，接收的论文将安排送交出版（含ISSN，DOI），并提交EI-Compendex（EI检索）及CPCI-S（ISTP检索）数据库收录。
-							发表EI检索及ISTP检索的论文，对国内高校教师的职称评定、硕博士生的学分累计、毕业、出国留学等具有举足轻重的影响。如您有意向发表相关领域学术论文，请尽快提交稿件。（检索范例请见页尾）<br/>
-			</p>
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“2019国际前沿生物科学与技术学术会议”于2019年12月26-28日在泰国曼谷--塔瓦那酒店成功召开。本届会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办；同时由玛希隆大学（Mahidol University），Nature Events，IOP出版社，及其他学术单位及媒体提供相关支持。<br/>
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;此外，目前可安排EI检索的会议论文(全文)进行发表----发表EI检索的论文，对国内高校教师的职称评定、硕博士生的学分累计、毕业、出国留学等具有举足轻重的影响。<br/>
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;意向发表会议论文的文章，会由大会学术委员会进行评审，接收的论文将安排送交出版（含ISSN，DOI），并提交EI-Compendex（EI检索）及CPCI-S（ISTP检索）数据库收录。请有意向的学者尽快提交稿件。<br/>
+            	</p>
 			
           </div>
 					<div class="mb-10">
