--- a/src/main/resources/templates/page/2020/cn/index.html
+++ b/src/main/resources/templates/page/2020/cn/index.html
@@ -116,15 +116,14 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">大会通知</div>
 				<div class="public_p pl-30">
         <ul>
-					<li><a href="/cn/download/conference_program.pdf" download="download" target="_blank" style="color: #102cf7"><u>点击下载会议指南(会议日程)</u></a></li>
+					<li><a href="/2019cn/proposal" target="_blank" style="color: #102cf7"><u>2020年会议合办邀请&通知</u></a></li>
+					<li><a href="/2019cn/achieve" target="_blank" style="color: #102cf7"><u>2019ICABST在曼谷塔瓦那酒店成功召开</u></a></li>
 					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>本会议已在泰国玛希隆大学(Mahidol University)官网上线</u></a></li>
-          <li><a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a></li>
-					<li><a href="/cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a></li>
-					<li><a href="/cn/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a></li>
-					<li><a href="/cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要发表--中科院三区，影响因子2以上，JCR二区</u></a></li>
-					<li><a href="/cn/cpci" target="_blank" style="color: #102cf7"><u>EI/CPCI检索会议论文征文通知</u></a></li>
-					<li><a href="/cn/submit" target="_blank" style="color: #102cf7"><u>在线提交参会信息入口已开放，请尽早提交参会信息</u></a></li>
-					<li><a href="/cn/venue" target="_blank" style="color: #102cf7"><u>签证、及会场周边住宿信息请参考“会议地点”</u></a></li>
+          <li><a href="/2019cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a></li>
+					<li><a href="/2019cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a></li>
+					<li><a href="/2019cn/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a></li>
+					<li><a href="/2019cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要发表--中科院三区，影响因子2以上，JCR二区</u></a></li>
+					<li><a href="/2019cn/cpci" target="_blank" style="color: #102cf7"><u>EI/CPCI检索会议论文征文通知</u></a></li>
         </ul>
         <div class="clear"></div>
       </div>
