--- a/src/main/resources/templates/page/2020/cn/sciabstract.html
+++ b/src/main/resources/templates/page/2020/cn/sciabstract.html
@@ -86,13 +86,13 @@ var _hmt = _hmt || [];
           </p>
           <div class="mb-10">
             <p>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>我方历年安排发表的SCI摘要均已完成检索（检索范例请于页尾查看），2019年上半年批次SCI摘要已完成发表，下半年批次仍在持续收稿中。</strong><br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCI摘要（Meeting Abstract）作为近几年的热门发表方式，具有易撰写、发表快、检索快、认可度高等特点<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>易撰写：</strong>200-300个英文单词即可（我方可提供翻译）；可将已发表过的论文精炼修改后再发表（需修改题目），也可将未发表的论文精简后发表（不会影响全文的发表）<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表快：</strong>我方负责全权录用--一经录用即可确保发表<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>检索收录快：</strong>文章发表后最快将在2个月内完成SCI检索收录<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>较高认可度：</strong>满足评定文件中“发表SCI收录的学术论文”的条件（细则请参见贵单位评定认定文件，或咨询贵单位科研处/人事处）<br/>
-			</p>
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   “2019国际前沿生物科学与技术学术会议”于2019年12月26-28日在泰国曼谷--塔瓦那酒店成功召开。本届会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办；同时由玛希隆大学（Mahidol University），Nature Events，IOP出版社，及其他学术单位及媒体提供相关支持。<br/>
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;此外，目前可安排SCI检索的短文、摘要进行发表----SCI短文、摘要（Meeting Abstract）作为近几年的热门发表方式，具有易撰写、发表快、检索快、认可度高等特点<br/>
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>易撰写：</strong>200-300个英文单词即可（我方可提供翻译）；可将已发表过的论文精炼修改后再发表（需修改题目），也可将未发表的论文精简后发表（不会影响全文的发表）<br/>
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表快：</strong>我方负责全权录用--一经录用即可确保发表<br/>
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>检索收录快：</strong>文章发表后最快将在2个月内完成SCI检索收录<br/>
+            	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>较高认可度：</strong>满足评定文件中“发表SCI收录的学术论文”的条件（细则请参见贵单位评定认定文件，或咨询贵单位科研处/人事处）<br/>
+            	</p>
 			
           </div>
 					<div class="mb-10">
