修改网页内容

--- a/src/main/resources/templates/page/2020/en/achieve.html
+++ b/src/main/resources/templates/page/2020/en/achieve.html
@@ -77,94 +77,91 @@ var _hmt = _hmt || [];
   </div>
   <!--header end-->
 
-  <div class="w-1200 bg_white pt-30">
-
-    <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
-      <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="public_p pb-20 pl-30">
-					<div class="text-center">
-					<p><strong>
-					  ICABST2019 successfully held in Bangkok, Thailand 
-						</strong></p>
-					</div>
-					<p>
-						 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology was successfully held in The Tawana Bangkok Hotel, Thailand.
-						 </p>
-					<p>
-					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ICABST2019 was organized by Asia-Pacific Association of Natural Science and Engineerin and Maejo University (Thailand), in collaboration with Mahidol University, Nature Events, IOP Pulishing, and multiple academic affiliations.
-						</p>
-					<p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In the opening ceremony, conference chair Prof. Gil Navon (School of Chemistry, Tel-Aviv University) and Prof. Hadi Shafiee (Harvard Medical School) inaugurated the conference by delivering welcome messages. 
-						Both of them gave an introduction of APANSE and warmly welcomed the delegates from all over the world. Prof. Gil Navon also made a short report about the proposal of ICABST2020.
-						Delegates from 16 countries attended the conference, including distinguished scholars who have outstanding influence in related fields.
-						</p>
-					<p>
-						The conference lasted for 2 days including Invited Session, five Oral Sessions and two Poster Sessions.
-						During the invited session, Prof. Gil Navon (Tel-Aviv University) with H-index of 52 & over 10000 times citations, gave an invited talk entitled "Molecular Imaging of Breast Cancer by Chemical Exchange Saturation Transfer MRI of Glucose Analogs". 
-						Then Prof. Hadi Shafiee (Harvard Medical School) gave a talk about "Mobile Health Diagnostics with Applications in Medicine". At last, Prof. Taisun Kim (CEO of Biometrix Technology Inc.; Professor of Hallym University) also gave a wonderful speeches with the title of "6 HCV Genotyping 9G testTM for highly accurate screening and genotyping of six HCV genotypes including HCV 1a, 1b, 2, 3, 4 and 6 (6a, 6f, 6i and 6n".
-						After invited session finished, Dr. Pornpun Vivithanaporn (Mahidol University), as the session chair, made a detailed conclusion of all invited speeches; accompanying a heated discussion.
-						</p>
-					<p>
-						ICABST is an annual academic event, the ICABST2020 is under preparation. Both Organizing Committee and Scientific Committee welcome scholars and researchers to participate the future events.
-						ICABST is pleased to announce this Call for Proposals for individuals or groups interested in co-organize the next ICABST conference, slated for the third quarter of 2020.
-						The proposal deadline is the February 15, 2020. If you are not personally interested but know of someone else who could do an excellent job of organizing this event, please feel free to forward this information.
-						</p>
-						<ul>
-							<div class="text-center">
-							<li>
-								<img src="../img/O1.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O2.jpg" width="280px">
-								<img src="../img/O3.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O4.jpg" width="280px">
-								<img src="../img/O5.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O6.jpg" width="280px">
-								<img src="../img/O7.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O8.jpg" width="280px">
-								<img src="../img/O9.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/C1.jpg" width="280px">
-								<img src="../img/C2.jpg" width="280px">
-							</li>
-							</div>
-							<div class="clear"></div>
-							</ul>
-      </div>
-    <div class="page_right col-4-1 fr mr-25">
-			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-			  <ul>
-			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
-			    <div class="clear"></div>
-			  </ul>
-			</div>
-        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
-				<div class="pb-10">
-        <ul>
-            <p>Abstract Deadline: Nov. 20, 2019</p>
-						<p>Reg. Deadline: Nov. 30, 2019</p>
-						<p>Acceptance: 7-10 working days</p>
-						<p>Conf. Date: December 26-28, 2019</p>
-        </ul>
-				</div>
-      <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
-        <ul>
-            <p>Asia-Pacific Asso. of Natural Science & Engineering<br/><br/>
-						Maejo University (Co-organizer)</p>
-        </ul>
-      </div>
-        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
-        <ul>
-            <p>Secretary: Jason Sun, Alex Liu</p>
-						<p>Email: icabst@apanse.com</p>
-            <p>Phone: 86-0371-63226982</p>
-            <p>Mobile: +86-18137471420</p>
-            <p>Wechat: APANSE</p>
-        </ul>
-    </div>
-      
-      <div class="clear"></div>
-
-
-    </div>
-
-  </div>
+ <div class="w-1200 bg_white pt-30">
+ 
+   <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
+     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
+       <div class="public_p pb-20 pl-30">
+ 				<div class="text-center">
+ 				<p><strong>
+ 				  ICABST2019 successfully held in Bangkok, Thailand 
+ 					</strong></p>
+ 				</div>
+ 				<p>
+ 					 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology was successfully held in The Tawana Bangkok Hotel, Thailand.
+ 					 </p>
+ 				<p>
+ 				  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ICABST2019 was organized by Asia-Pacific Association of Natural Science and Engineerin and Maejo University (Thailand), in collaboration with Mahidol University, Nature Events, IOP Pulishing, and multiple academic affiliations.
+ 					</p>
+ 				<p>
+           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In the opening ceremony, conference chair Prof. Gil Navon (School of Chemistry, Tel-Aviv University) and Prof. Hadi Shafiee (Harvard Medical School) inaugurated the conference by delivering welcome messages. 
+ 					Both of them gave an introduction of APANSE and warmly welcomed the delegates from all over the world. Prof. Gil Navon also made a short report about the proposal of ICABST2020.
+ 					Delegates from 16 countries attended the conference, including distinguished scholars who have outstanding influence in related fields.
+ 					</p>
+ 				<p>
+ 					The conference lasted for 2 days including Invited Session, five Oral Sessions and two Poster Sessions.
+ 					During the invited session, Prof. Gil Navon (Tel-Aviv University) with H-index of 52 & over 10000 times citations, gave an invited talk entitled "Molecular Imaging of Breast Cancer by Chemical Exchange Saturation Transfer MRI of Glucose Analogs". 
+ 					Then Prof. Hadi Shafiee (Harvard Medical School) gave a talk about "Mobile Health Diagnostics with Applications in Medicine". At last, Prof. Taisun Kim (CEO of Biometrix Technology Inc.; Professor of Hallym University) also gave a wonderful speeches with the title of "6 HCV Genotyping 9G testTM for highly accurate screening and genotyping of six HCV genotypes including HCV 1a, 1b, 2, 3, 4 and 6 (6a, 6f, 6i and 6n".
+ 					After invited session finished, Dr. Pornpun Vivithanaporn (Mahidol University), as the session chair, made a detailed conclusion of all invited speeches; accompanying a heated discussion.
+ 					</p>
+ 				<p>
+ 					ICABST is an annual academic event, the ICABST2020 is under preparation. Both Organizing Committee and Scientific Committee welcome scholars and researchers to participate the future events.
+ 					ICABST is pleased to announce this Call for Proposals for individuals or groups interested in co-organize the next ICABST conference, slated for the third quarter of 2020.
+ 					The proposal deadline is the February 15, 2020. If you are not personally interested but know of someone else who could do an excellent job of organizing this event, please feel free to forward this information.
+ 					</p>
+ 					<ul>
+ 						<div class="text-center">
+ 						<li>
+ 							<img src="../img/O1.jpg" width="320px">&nbsp;&nbsp;<img src="../img/O2.jpg" width="320px"><br/><br/>
+ 							<img src="../img/O3.jpg" width="320px">&nbsp;&nbsp;<img src="../img/O4.jpg" width="320px"><br/><br/>
+ 							<img src="../img/O5.jpg" width="320px">&nbsp;&nbsp;<img src="../img/O6.jpg" width="320px"><br/><br/>
+ 							<img src="../img/O7.jpg" width="320px">&nbsp;&nbsp;<img src="../img/O8.jpg" width="320px"><br/><br/>
+ 							<img src="../img/O9.jpg" width="320px">&nbsp;&nbsp;<img src="../img/C1.jpg" width="320px"><br/><br/>
+ 							<img src="../img/C2.jpg" width="320px">
+ 						</li>
+ 						</div>
+ 						<div class="clear"></div>
+ 						</ul>
+     </div>
+ 		</div>
+   <div class="page_right col-4-1 fr mr-25">
+ 		<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
+ 		  <ul>
+ 		    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
+ 		    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
+ 		    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
+ 		    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+ 		    <div class="clear"></div>
+ 		  </ul>
+ 		</div>
+       <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
+ 			<div class="pb-10">
+       <ul>
+           <p>Abstract Deadline: Nov. 20, 2019</p>
+ 					<p>Reg. Deadline: Nov. 30, 2019</p>
+ 					<p>Acceptance: 7-10 working days</p>
+ 					<p>Conf. Date: December 26-28, 2019</p>
+       </ul>
+ 			</div>
+     <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
+       <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
+       <ul>
+           <p>Asia-Pacific Asso. of Natural Science & Engineering<br/><br/>
+ 					Maejo University (Co-organizer)</p>
+       </ul>
+     </div>
+       <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
+       <ul>
+           <p>Secretary: Jason Sun, Alex Liu</p>
+ 					<p>Email: icabst@apanse.com</p>
+           <p>Phone: 86-0371-63226982</p>
+           <p>Mobile: +86-18137471420</p>
+           <p>Wechat: APANSE</p>
+       </ul>
+   </div>
+     <div class="clear"></div>
+   </div>
+ </div>
 
 <!--footer-->
 <footer class="main-footer">
