--- a/src/main/resources/templates/page/2020/en/index.html
+++ b/src/main/resources/templates/page/2020/en/index.html
@@ -130,12 +130,11 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">News</div>
 				<div class="public_p pl-30">
         <ul>
-					<li><a href="/cn/download/conference_program.pdf" download="download" target="_blank" style="color: #102cf7"><u>Clike for Conference Program</u></a></li>
-					<li><a href="/submit" target="_blank" style="color: #102cf7"><u>Onilne Registration System is open to November 20, 2019</u></a></li>
-					<li><a href="/program" target="_blank" style="color: #102cf7"><u>Primary Conference Program has been issued</u></a></li>
-          <li><a href="/about" target="_blank" style="color: #102cf7"><u>ICABST2019 will be divided to 7 Sessions</u></a></li>
-					<li><a href="/venue" target="_blank" style="color: #102cf7"><u>For visa, venue and accommodations, please click "Venue" for details</u></a></li>
-					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>ICABST2019 announcement released by Mahidol University</u></a></li>
+        	<li><a href="/2019/proposal" target="_blank" style="color: #102cf7"><u>Call for Proposal of ICABST2020</u></a></li>
+        	<li><a href="/2019/achieve" target="_blank" style="color: #102cf7"><u>ICABST2019 Successfully Held in Bangkok, Thailand</u></a></li>
+        	<li><a href="/cn/download/conference_program2019.pdf" download="download" target="_blank" style="color: #102cf7"><u>Clike for Conference Program</u></a></li>
+        	<li><a href="/2019/venue" target="_blank" style="color: #102cf7"><u>For visa, venue and accommodations, please click "Venue" for details</u></a></li>
+        	<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>ICABST2019 announcement released by Mahidol University</u></a></li>
         </ul>
         <div class="clear"></div>
       </div>
